welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: '<-' expected but ';' found.
		avance();gauche();avance();droite();
                                 ^Array1:9: error: '<-' expected but ';' found.
		avance();gauche();avance();droite();
                                          ^Array1:9: error: '<-' expected but ';' found.
		avance();gauche();avance();droite();
                                                   ^Array1:10: error: '<-' expected but ';' found.
    	baisseBrosse();
                      ^Array1:11: error: illegal start of simple pattern
    	for (k<-1 to l){
        ^Array1:23: error: '<-' expected but '}' found.
}
^